welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:6: error: ')' expected but ';' found.
if (estSurBiscuit();){
                   ^RunFour:6: error: illegal start of statement
if (estSurBiscuit();){
                    ^